--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1,14 +1,14 @@
 @font-face {
   font-family: 'batman';
-  src:url('fonts/batman.ttf');
+  src:url(batman.ttf);
   font-weight: normal;
   font-style: normal;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-family: 'batman' !important;
-  padding-top: 10px;
-}
+// h1, h2, h3, h4, h5, h6 {
+//   font-family: 'batman' !important;
+//   padding-top: 10px;
+// }
 
 #header {
   background-color: #4a4d50;
