--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'batman';
-  src:url('fonts/batman.ttf');
+  src:url(batman.ttf);
   font-weight: normal;
   font-style: normal;
 }
