--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -5,10 +5,10 @@
   font-style: normal;
 }
 
-// h1, h2, h3, h4, h5, h6 {
-//   font-family: 'batman' !important;
-//   padding-top: 10px;
-// }
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'batman' !important;
+  padding-top: 10px;
+}
 
 #header {
   background-color: #4a4d50;
