update headings to be consistent

--- a/app/views/inject_responses/index.html.haml
+++ b/app/views/inject_responses/index.html.haml
@@ -1,4 +1,4 @@
-= header "List Inject Responses", icon: :folder_open, skip_button: true
+= header "List of Inject Responses", icon: :folder_open, skip_button: true
 
 - if current_user.admin?
   .panel-group#accordion{role: "tablist", "aria-multiselectable"=>"true"}
