add inject scoring

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -98,3 +98,9 @@ body {
     border-color: #d43f3a !important;
   }
 }
+
+tr.total {
+  background-color: #eee;
+  border-top: 2px solid #ddd;
+  border-bottom: 2px solid #ddd;
+}
