--- a/app/views/injects/_form.html.haml
+++ b/app/views/injects/_form.html.haml
@@ -8,16 +8,25 @@
         = f.label :description
         = f.text_area :description, rows: 10, class: "form-control"
     .col-xs-6
-      .form-group
-        .input-group.date#datetimepicker1
-          = f.datetime_field :available_at, placeholder: 'Available At', class: "form-control"
-          %span.input-group-addon
-            %span.glyphicon.glyphicon-calendar
-      .form-group
-        .input-group.date#datetimepicker2
-          = f.datetime_field :due_at, placeholder: 'Due At', class: "form-control"
-          %span.input-group-addon
-            %span.glyphicon.glyphicon-calendar
+      .row
+        .col-xs-6
+          .form-group
+            .input-group.date#datetimepicker1
+              = f.datetime_field :available_at, placeholder: 'Available At', class: "form-control"
+              %span.input-group-addon
+                %span.glyphicon.glyphicon-calendar
+        .col-xs-6
+          .form-group
+            .input-group.date#datetimepicker2
+              = f.datetime_field :due_at, placeholder: 'Due At', class: "form-control"
+              %span.input-group-addon
+                %span.glyphicon.glyphicon-calendar
+      %hr
+      .row
+        .col-xs-12
+          .form-group
+            = f.label :max_score, 'Max Score'
+            = f.text_field :max_score, placeholder: 'Max Score', class: 'form-control'
   .row
     .col-xs-6
       = f.submit "Submit", class: "btn btn-success"
