--- a/app/views/inject_responses/summary.html.haml
+++ b/app/views/inject_responses/summary.html.haml
@@ -55,7 +55,7 @@
                   &times;
               %h4.modal-title 
                 Add Score
-                %small= "#{response.inject} (#{response.user.username})"
+                %small= "#{response.inject} (#{response.username})"
             .modal-body
               = form_for response do |f|
                 .row
