--- a/app/views/injects/show.html.haml
+++ b/app/views/injects/show.html.haml
@@ -19,7 +19,7 @@
     %br
     = link_to 'List of Injects', injects_path, class: 'btn btn-info'
     - unless @inject_response
-      = link_to 'Submit Inject Response', new_inject_inject_response_path(@inject), class: 'btn btn-success' if current_user.is_team?
+      = link_to 'Submit Inject Response', new_inject_inject_response_path(@inject), class: 'btn btn-success' if current_user.in_group?(:blue_team)
 
   .col-xs-6
     - if @inject_response
