--- a/app/views/groups/index.html.haml
+++ b/app/views/groups/index.html.haml
@@ -1,4 +1,4 @@
-= header "List of Groups", icon: :users, skip_button: true, button: link_to('New Group', new_group_path, class: 'btn btn-success')
+= header "List of Groups", Group, icon: :users, skip_button: true, button: link_to('New Group', new_group_path, class: 'btn btn-success')
 
 %table.table.table-striped
   %thead
