--- a/app/views/guides/index.html.haml
+++ b/app/views/guides/index.html.haml
@@ -1,4 +1,4 @@
-= header "List of Guides", icon: :question_circle
+= header "List of Guides", Guide, icon: :question_circle
 
 %table.table.table-striped
   %thead
