--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,4 +1,4 @@
-= header "List of Users", icon: :user, button: link_to('Groups', '#', {"data-toggle"=>"modal", "data-target"=>"#groups-modal", class: 'btn btn-info'})
+= header "List of Users", User, icon: :user, button: link_to('Groups', '#', {"data-toggle"=>"modal", "data-target"=>"#groups-modal", class: 'btn btn-info'})
 
 %table.table.table-striped
   %thead
