--- a/app/views/injects/index.html.haml
+++ b/app/views/injects/index.html.haml
@@ -1,30 +1,30 @@
 = header "List of Injects", Inject, icon: :list
 
-%table.table.table-striped
-  %thead
-    %tr
-      %th Title
-      %th Description
-      %th Available At
-      %th Due At
-      - if current_user.admin?
-        %th.center Max Score
-      - else
-        %th Submission
-      %th
-  %tbody
-    - @injects.each do |inject|
+- @injects.group_by(&:event).each do |event|
+  %h3= event.first || 'No Event'
+  %table.table.table-striped
+    %thead
       %tr
-        %td= inject.title
-        %td= truncate inject.description, length: 20
-        %td= inject.available_at.strftime("%m/%d/%Y %H:%M")
-        %td= inject.due_at.strftime("%m/%d/%Y %H:%M")
+        %th Title
+        %th Available At
+        %th Due At
         - if current_user.admin?
-          %td.center= inject.max_score
+          %th.center Max Score
         - else
-          - response = inject.inject_responses.where(user: current_user).first
-          - if response
-            %td= link_to inject.inject_responses.where(user: current_user).first.submission_file_name, inject.inject_responses.where(user: current_user).first.submission.url
+          %th Submission
+        %th
+    %tbody
+      - event.last.each do |inject|
+        %tr
+          %td= inject.title
+          %td= inject.available_at.strftime("%m/%d/%Y %H:%M")
+          %td= inject.due_at.strftime("%m/%d/%Y %H:%M")
+          - if current_user.admin?
+            %td.center= inject.max_score
           - else
-            %td= text_icon :close, color: :red
-        %td.right= object_actions inject
+            - response = inject.inject_responses.where(user: current_user).first
+            - if response
+              %td= link_to inject.inject_responses.where(user: current_user).first.submission_file_name, inject.inject_responses.where(user: current_user).first.submission.url
+            - else
+              %td= text_icon :close, color: :red
+          %td.right= object_actions inject
