--- a/app/views/events/_form.html.haml
+++ b/app/views/events/_form.html.haml
@@ -1,22 +1,26 @@
 = errors_for @event
 = form_for @event do |f|
   .row
-    .col-xs-6
+    .col-sm-6
       .form-group
         = f.text_field :name, placeholder: 'Name', class: 'form-control'
       .row
-        .col-xs-6
+        .col-sm-6
           .form-group
+            = f.label :available_at, 'Available'
             .input-group.datetimepicker
               = f.datetime_field :available_at, placeholder: 'Available At', class: "form-control"
               %span.input-group-addon
                 %span.glyphicon.glyphicon-calendar
-        .col-xs-6
+        .col-sm-6
           .form-group
+            = f.label :unavailable_at, 'Unavailable'
             .input-group.datetimepicker
               = f.datetime_field :unavailable_at, placeholder: 'Unavailable At', class: "form-control"
               %span.input-group-addon
                 %span.glyphicon.glyphicon-calendar
 
-  = f.submit 'Submit', class: 'btn btn-success'
-  = link_to 'Cancel', events_path, class: 'btn btn-danger'
+  .row
+    .col-sm-6
+      = f.submit 'Submit', class: 'btn btn-success'
+      = link_to 'Cancel', events_path, class: 'btn btn-danger'
