--- a/app/views/injects/_form.html.haml
+++ b/app/views/injects/_form.html.haml
@@ -1,33 +1,39 @@
 = errors_for @inject
 = form_for @inject do |f|
   .row
-    .col-xs-6
+    .col-md-6
       .form-group
         = f.text_field :title, placeholder: 'Title', class: "form-control"
       .form-group
         = f.label :description
         = f.text_area :description, rows: 10, class: "form-control"
-    .col-xs-6
+    .col-md-6
       .row
-        .col-xs-6
+        .col-sm-6
           .form-group
+            = f.label :available_at, 'Available'
             .input-group.datetimepicker
               = f.datetime_field :available_at, placeholder: 'Available At', class: "form-control"
               %span.input-group-addon
                 %span.glyphicon.glyphicon-calendar
-        .col-xs-6
+        .col-sm-6
           .form-group
+            = f.label :due_at, 'Due'
             .input-group.datetimepicker
               = f.datetime_field :due_at, placeholder: 'Due At', class: "form-control"
               %span.input-group-addon
                 %span.glyphicon.glyphicon-calendar
       %hr
       .row
-        .col-xs-12
+        .col-sm-6
           .form-group
             = f.label :max_score, 'Max Score'
             = f.text_field :max_score, placeholder: 'Max Score', class: 'form-control'
+        .col-sm-6
+          .form-group
+            = f.label :event_id, 'Event'
+            = f.collection_select :event_id, Event.all, :id, :name, {prompt: true}, {class: 'chosen-select'}
   .row
-    .col-xs-6
+    .col-sm-6
       = f.submit "Submit", class: "btn btn-success"
       = link_to "Cancel", injects_path, class: "btn btn-danger"
