--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -5,6 +5,11 @@
   font-style: normal;
 }
 
+.turbolinks-progress-bar {
+  height: 5px;
+  background-color: green;
+}
+
 body {
   margin-top: 70px !important;
 }
@@ -97,6 +102,22 @@ body {
   .form-control {
     border-color: #d43f3a !important;
   }
+}
+
+.form-actions {
+  position: fixed;
+  top: 125px;
+  right: 0px;
+  width: 75px;
+  background-color: rgba(255,255,255,0.7);
+  border-radius: 5px;
+  .btn {
+    width: 100%;
+  }
+}
+
+span.description {
+  font-style: italic;
 }
 
 tr.total {
