--- a/app/views/shared/navigation.html.haml
+++ b/app/views/shared/navigation.html.haml
@@ -13,6 +13,7 @@
         - if current_user
           %li{class: (controller_name =~ /injects/ ? 'active' : '')}= link_to "Injects", injects_path
           %li{class: (controller_name =~ /inject_responses/ ? 'active' : '')}= link_to "Inject Responses", inject_responses_path
+          %li{class: (controller_name =~ /ctf/ ? 'active' : '')}= link_to 'CTF', ctf_index_path
       %ul.nav.navbar-nav.navbar-right
         - if current_user
           %li{class: (controller_name =~ /guides/ ? 'active' : '')}= link_to "Guides", guides_path
