--- a/app/views/flag_categories/_form.html.haml
+++ b/app/views/flag_categories/_form.html.haml
@@ -11,6 +11,9 @@
         = f.collection_select :event_id, Event.all, :id, :name, {}, {class: 'chosen-select'}
       .form-group
         = f.text_field :name, placeholder: 'Name', class: 'form-control'
+      .form-group
+        = f.label :description
+        = f.text_area :description, placeholder: 'Description', class: 'form-control'
     .col-sm-6
       #flags
         = f.fields_for :flags do |flag|
