add flag submissions and update ctf

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -133,3 +133,7 @@ label.btn.multiple-choice {
   overflow: hidden;
   border-radius: 4px !important;
 }
+
+.tooltip-inner {
+  white-space:pre-wrap;
+}
